[package]
name = "pyext-myrustlib"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myrustlib"
crate-type = ["dylib"]

[dependencies.rff]
version = "0.3.0"

[dependencies.cpython]
version = "0.3"
features = ["extension-module"]
